--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -303,6 +303,9 @@
   "Life360TrackerDriverVersion": "NA",
   "Life360TrackerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
   "Life360TrackerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-child.groovy",
+  "Life360TrackerChild2RawCode": "NA",
+  "Life360TrackerChild3RawCode": "NA",
+  "Life360TrackerChild4RawCode": "NA",
   "Life360TrackerDriverRawCode": "NA",
   "Life360TrackerDiscussion": "https://community.hubitat.com/t/release-life360-tracker-works-with-the-paid-and-free-versions-of-life360/18276",
   "Life360TrackerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -320,6 +323,9 @@
   "Life360withStatesDriverVersion": "v1.1.3",
   "Life360withStatesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-app.groovy",
   "Life360withStatesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy",
+  "Life360withStatesChild2RawCode": "NA",
+  "Life360withStatesChild3RawCode": "NA",
+  "Life360withStatesChild4RawCode": "NA",
   "Life360withStatesDriverRawCode": "NA",
   "Life360withStatesDiscussion": "https://community.hubitat.com/t/release-life360-with-states-track-all-attributes-with-app-and-driver-also-supports-rm4-and-dashboards/18274",
   "Life360withStatesUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -337,6 +343,9 @@
   "LightingEffectsDriverVersion": "NA",
   "LightingEffectsParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
   "LightingEffectsChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Child.groovy",
+  "LightingEffectsChild2RawCode": "NA",
+  "LightingEffectsChild3RawCode": "NA",
+  "LightingEffectsChild4RawCode": "NA",
   "LightingEffectsDriverRawCode": "NA",
   "LightingEffectsDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
   "LightingEffectsUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -354,6 +363,9 @@
   "MagicCubeDriverVersion": "NA",
   "MagicCubeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
   "MagicCubeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy",
+  "MagicCubeChild2RawCode": "NA",
+  "MagicCubeChild3RawCode": "NA",
+  "MagicCubeChild4RawCode": "NA",
   "MagicCubeDriverRawCode": "NA",
   "MagicCubeDiscussion": "https://community.hubitat.com/t/release-magic-cube/11987",
   "MagicCubeUpdateNote": "V2.0.1 - 08/21/19 - (dan.t) added ability to execute rule actions",
@@ -371,6 +383,9 @@
   "MotionControlledSceneLightingDriverVersion": "NA",
   "MotionControlledSceneLightingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Parent.groovy",
   "MotionControlledSceneLightingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
+  "MotionControlledSceneLightingChild2RawCode": "NA",
+  "MotionControlledSceneLightingChild3RawCode": "NA",
+  "MotionControlledSceneLightingChild4RawCode": "NA",
   "MotionControlledSceneLightingDriverRawCode": "NA",
   "MotionControlledSceneLightingDiscussion": "https://community.hubitat.com/t/release-motion-controlled-scene-lighting/7419",
   "MotionControlledSceneLightingUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -388,6 +403,9 @@
   "NotifierPlusDriverVersion": "NA",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
   "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
+  "NotifierPlusChild2RawCode": "NA",
+  "NotifierPlusChild3RawCode": "NA",
+  "NotifierPlusChild4RawCode": "NA",
   "NotifierPlusDriverRawCode": "NA",
   "NotifierPlusDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
   "NotifierPlusUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -405,6 +423,9 @@
   "OneataTimeDriverVersion": "NA",
   "OneataTimeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
   "OneataTimeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
+  "OneataTimeChild2RawCode": "NA",
+  "OneataTimeChild3RawCode": "NA",
+  "OneataTimeChild4RawCode": "NA",
   "OneataTimeDriverRawCode": "NA",
   "OneataTimeDiscussion": "https://community.hubitat.com/t/release-one-at-a-time/7063",
   "OneataTimeUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -422,6 +443,9 @@
   "SendIP2IRDriverVersion": "V1.0.3",
   "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
   "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
+  "SendIP2IRChild2RawCode": "NA",
+  "SendIP2IRChild3RawCode": "NA",
+  "SendIP2IRChild4RawCode": "NA",
   "SendIP2IRDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Driver.groovy",
   "SendIP2IRDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
   "SendIP2IRUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -439,6 +463,9 @@
   "SimpleDeviceTimerDriverVersion": "NA",
   "SimpleDeviceTimerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-parent.groovy",
   "SimpleDeviceTimerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-child.groovy",
+  "SimpleDeviceTimerChild2RawCode": "NA",
+  "SimpleDeviceTimerChild3RawCode": "NA",
+  "SimpleDeviceTimerChild4RawCode": "NA",
   "SimpleDeviceTimerDriverRawCode": "NA",
   "SimpleDeviceTimerDiscussion": "https://community.hubitat.com/t/release-simple-device-timer/16917",
   "SimpleDeviceTimerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -456,6 +483,9 @@
   "SimpleIrrigationDriverVersion": "NA",
   "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
   "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
+  "SimpleIrrigationChild2RawCode": "NA",
+  "SimpleIrrigationChild3RawCode": "NA",
+  "SimpleIrrigationChild4RawCode": "NA",
   "SimpleIrrigationDriverRawCode": "NA",
   "SimpleIrrigationDiscussion": "-",
   "SimpleIrrigationUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -473,6 +503,9 @@
   "SnapshotDriverVersion": "v1.0.9",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
   "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
+  "SnapshotChild2RawCode": "NA",
+  "SnapshotChild3RawCode": "NA",
+  "SnapshotChild4RawCode": "NA",
   "SnapshotDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-driver.groovy",
   "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
   "SnapshotUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -490,6 +523,9 @@
   "WebPingerDriverVersion": "NA",
   "WebPingerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
   "WebPingerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
+  "WebPingerChild2RawCode": "NA",
+  "WebPingerChild3RawCode": "NA",
+  "WebPingerChild4RawCode": "NA",
   "WebPingerDriverRawCode": "NA",
   "WebPingerDiscussion": "https://community.hubitat.com/t/release-web-pinger/8347",
   "WebPingerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -507,6 +543,9 @@
   "WelcomeHomeDriverVersion": "v1.0.2",
   "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
   "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
+  "WelcomeHomeChild2RawCode": "NA",
+  "WelcomeHomeChild3RawCode": "NA",
+  "WelcomeHomeChild4RawCode": "NA",
   "WelcomeHomeDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Driver.groovy",
   "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
   "WelcomeHomeUpdateNote": "V2.1.1 - 08/18/19 - App Watchdog 2 compatible",
