--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -33,7 +33,7 @@
   "AbacusIntenseCountingType": "App",
   "AbacusIntenseCountingParentVersion": "v2.0.0",
   "AbacusIntenseCountingChildVersion": "v2.0.0",
-  "AbacusIntenseCountingChildName": "NA",
+  "AbacusIntenseCountingChildName": "Child",
   "AbacusIntenseCountingChild2Version": "NA",
   "AbacusIntenseCountingChild2Name": "NA",
   "AbacusIntenseCountingChild3Version": "NA",
@@ -53,7 +53,7 @@
   "AbacusTimeTravelerType": "App",
   "AbacusTimeTravelerParentVersion": "v2.0.0",
   "AbacusTimeTravelerChildVersion": "v2.0.0",
-  "AbacusTimeTravelerChildName": "NA",
+  "AbacusTimeTravelerChildName": "Child",
   "AbacusTimeTravelerChild2Version": "NA",
   "AbacusTimeTravelerChild2Name": "NA",
   "AbacusTimeTravelerChild3Version": "NA",
@@ -73,7 +73,7 @@
   "AppWatchdog2Type": "App",
   "AppWatchdog2ParentVersion": "v2.0.0",
   "AppWatchdog2ChildVersion": "v2.0.1",
-  "AppWatchdog2ChildName": "NA",
+  "AppWatchdog2ChildName": "Child",
   "AppWatchdog2Child2Version": "NA",
   "AppWatchdog2Child2Name": "NA",
   "AppWatchdog2Child3Version": "NA",
@@ -93,7 +93,7 @@
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v2.0.0",
   "AtHomeSimulatorChildVersion": "v2.0.0",
-  "AtHomeSimulatorChildName": "NA",
+  "AtHomeSimulatorChildName": "Child",
   "AtHomeSimulatorChild2Version": "NA",
   "AtHomeSimulatorChild2Name": "NA",
   "AtHomeSimulatorChild3Version": "NA",
@@ -113,7 +113,7 @@
   "BIControlType": "App",
   "BIControlParentVersion": "v2.0.0",
   "BIControlChildVersion": "v2.0.0",
-  "BIControlChildName": "NA",
+  "BIControlChildName": "Child",
   "BIControlChild2Version": "NA",
   "BIControlChild2Name": "NA",
   "BIControlChild3Version": "NA",
@@ -133,7 +133,7 @@
   "CATTDirectorType": "App",
   "CATTDirectorParentVersion": "v2.0.0",
   "CATTDirectorChildVersion": "v2.0.0",
-  "CATTDirectorChildName": "NA",
+  "CATTDirectorChildName": "Child",
   "CATTDirectorChild2Version": "NA",
   "CATTDirectorChild2Name": "NA",
   "CATTDirectorChild3Version": "NA",
@@ -153,7 +153,7 @@
   "ChromecastHelperType": "App",
   "ChromecastHelperParentVersion": "v2.0.0",
   "ChromecastHelperChildVersion": "NA",
-  "ChromecastHelperChildName": "NA",
+  "ChromecastHelperChildName": "Child",
   "ChromecastHelperChild2Version": "NA",
   "ChromecastHelperChild2Name": "NA",
   "ChromecastHelperChild3Version": "NA",
@@ -193,7 +193,7 @@
   "DeviceSequencerType": "App",
   "DeviceSequencerParentVersion": "v2.0.0",
   "DeviceSequencerChildVersion": "v2.0.0",
-  "DeviceSequencerChildName": "NA",
+  "DeviceSequencerChildName": "Child",
   "DeviceSequencerChild2Version": "NA",
   "DeviceSequencerChild2Name": "NA",
   "DeviceSequencerChild3Version": "NA",
@@ -213,7 +213,7 @@
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v2.0.0",
   "DeviceWatchdogChildVersion": "v2.0.0",
-  "DeviceWatchdogChildName": "NA",
+  "DeviceWatchdogChildName": "Child",
   "DeviceWatchdogChild2Version": "NA",
   "DeviceWatchdogChild2Name": "NA",
   "DeviceWatchdogChild3Version": "NA",
@@ -233,7 +233,7 @@
   "FollowMeType": "App",
   "FollowMeParentVersion": "v2.0.0",
   "FollowMeChildVersion": "v2.0.2",
-  "FollowMeChildName": "NA",
+  "FollowMeChildName": "Child",
   "FollowMeChild2Version": "NA",
   "FollowMeChild2Name": "NA",
   "FollowMeChild3Version": "NA",
@@ -253,7 +253,7 @@
   "FullyKioskDirectorType": "App",
   "FullyKioskDirectorParentVersion": "v2.0.0",
   "FullyKioskDirectorChildVersion": "v2.0.0",
-  "FullyKioskDirectorChildName": "NA",
+  "FullyKioskDirectorChildName": "Child",
   "FullyKioskDirectorChild2Version": "NA",
   "FullyKioskDirectorChild2Name": "NA",
   "FullyKioskDirectorChild3Version": "NA",
@@ -273,7 +273,7 @@
   "GentleWakeUpType": "App",
   "GentleWakeUpParentVersion": "v2.0.0",
   "GentleWakeUpChildVersion": "v2.0.0",
-  "GentleWakeUpChildName": "NA",
+  "GentleWakeUpChildName": "Child",
   "GentleWakeUpChild2Version": "NA",
   "GentleWakeUpChild2Name": "NA",
   "GentleWakeUpChild3Version": "NA",
@@ -293,7 +293,7 @@
   "Life360TrackerType": "App",
   "Life360TrackerParentVersion": "v2.0.0",
   "Life360TrackerChildVersion": "v2.0.0",
-  "Life360TrackerChildName": "NA",
+  "Life360TrackerChildName": "Child",
   "Life360TrackerChild2Version": "NA",
   "Life360TrackerChild2Name": "NA",
   "Life360TrackerChild3Version": "NA",
@@ -313,7 +313,7 @@
   "Life360withStatesType": "App",
   "Life360withStatesParentVersion": "v2.0.0",
   "Life360withStatesChildVersion": "NA",
-  "Life360withStatesChildName": "NA",
+  "Life360withStatesChildName": "Child",
   "Life360withStatesChild2Version": "NA",
   "Life360withStatesChild2Name": "NA",
   "Life360withStatesChild3Version": "NA",
@@ -333,7 +333,7 @@
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v2.0.0",
   "LightingEffectsChildVersion": "v2.0.0",
-  "LightingEffectsChildName": "NA",
+  "LightingEffectsChildName": "Child",
   "LightingEffectsChild2Version": "NA",
   "LightingEffectsChild2Name": "NA",
   "LightingEffectsChild3Version": "NA",
@@ -353,7 +353,7 @@
   "MagicCubeType": "App",
   "MagicCubeParentVersion": "v2.0.0",
   "MagicCubeChildVersion": "v2.0.1",
-  "MagicCubeChildName": "NA",
+  "MagicCubeChildName": "Child",
   "MagicCubeChild2Version": "NA",
   "MagicCubeChild2Name": "NA",
   "MagicCubeChild3Version": "NA",
@@ -373,7 +373,7 @@
   "MotionControlledSceneLightingType": "App",
   "MotionControlledSceneLightingParentVersion": "v2.0.0",
   "MotionControlledSceneLightingChildVersion": "v2.0.0",
-  "MotionControlledSceneLightingChildName": "NA",
+  "MotionControlledSceneLightingChildName": "Child",
   "MotionControlledSceneLightingChild2Version": "NA",
   "MotionControlledSceneLightingChild2Name": "NA",
   "MotionControlledSceneLightingChild3Version": "NA",
@@ -393,7 +393,7 @@
   "NotifierPlusType": "App",
   "NotifierPlusParentVersion": "v2.0.0",
   "NotifierPlusChildVersion": "v2.0.0",
-  "NotifierPlusChildName": "NA",
+  "NotifierPlusChildName": "Child",
   "NotifierPlusChild2Version": "NA",
   "NotifierPlusChild2Name": "NA",
   "NotifierPlusChild3Version": "NA",
@@ -413,7 +413,7 @@
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v2.0.0",
   "OneataTimeChildVersion": "v2.0.0",
-  "OneataTimeChildName": "NA",
+  "OneataTimeChildName": "Child",
   "OneataTimeChild2Version": "NA",
   "OneataTimeChild2Name": "NA",
   "OneataTimeChild3Version": "NA",
@@ -433,7 +433,7 @@
   "SendIP2IRType": "App",
   "SendIP2IRParentVersion": "v2.0.0",
   "SendIP2IRChildVersion": "v2.0.0",
-  "SendIP2IRChildName": "NA",
+  "SendIP2IRChildName": "Child",
   "SendIP2IRChild2Version": "NA",
   "SendIP2IRChild2Name": "NA",
   "SendIP2IRChild3Version": "NA",
@@ -453,7 +453,7 @@
   "SimpleDeviceTimerType": "App",
   "SimpleDeviceTimerParentVersion": "v2.0.0",
   "SimpleDeviceTimerChildVersion": "v2.0.0",
-  "SimpleDeviceTimerChildName": "NA",
+  "SimpleDeviceTimerChildName": "Child",
   "SimpleDeviceTimerChild2Version": "NA",
   "SimpleDeviceTimerChild2Name": "NA",
   "SimpleDeviceTimerChild3Version": "NA",
@@ -473,7 +473,7 @@
   "SimpleIrrigationType": "App",
   "SimpleIrrigationParentVersion": "v2.0.0",
   "SimpleIrrigationChildVersion": "v2.0.0",
-  "SimpleIrrigationChildName": "NA",
+  "SimpleIrrigationChildName": "Child",
   "SimpleIrrigationChild2Version": "NA",
   "SimpleIrrigationChild2Name": "NA",
   "SimpleIrrigationChild3Version": "NA",
@@ -493,7 +493,7 @@
   "SnapshotType": "App",
   "SnapshotParentVersion": "v2.0.0",
   "SnapshotChildVersion": "v2.0.0",
-  "SnapshotChildName": "NA",
+  "SnapshotChildName": "Child",
   "SnapshotChild2Version": "NA",
   "SnapshotChild2Name": "NA",
   "SnapshotChild3Version": "NA",
@@ -513,7 +513,7 @@
   "WebPingerType": "App",
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChildVersion": "v2.0.0",
-  "WebPingerChildName": "NA",
+  "WebPingerChildName": "Child",
   "WebPingerChild2Version": "NA",
   "WebPingerChild2Name": "NA",
   "WebPingerChild3Version": "NA",
@@ -533,7 +533,7 @@
   "WelcomeHomeType": "App",
   "WelcomeHomeParentVersion": "v2.0.3",
   "WelcomeHomeChildVersion": "v2.1.1",
-  "WelcomeHomeChildName": "NA",
+  "WelcomeHomeChildName": "Child",
   "WelcomeHomeChild2Version": "NA",
   "WelcomeHomeChild2Name": "NA",
   "WelcomeHomeChild3Version": "NA",
