--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -71,8 +71,8 @@
   "AbacusTimeTravelerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
 
   "AppWatchdog2Type": "App",
-  "AppWatchdog2ParentVersion": "v2.0.0",
-  "AppWatchdog2ChildVersion": "v2.0.1",
+  "AppWatchdog2ParentVersion": "v2.0.1",
+  "AppWatchdog2ChildVersion": "v2.0.2",
   "AppWatchdog2ChildName": "Child",
   "AppWatchdog2Child2Version": "NA",
   "AppWatchdog2Child2Name": "NA",
@@ -80,7 +80,7 @@
   "AppWatchdog2Child3Name": "NA",
   "AppWatchdog2Child4Version": "NA",
   "AppWatchdog2Child4Name": "NA",
-  "AppWatchdog2DriverVersion": "v2.0.0",
+  "AppWatchdog2DriverVersion": "v2.0.1",
   "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
   "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
   "AppWatchdog2Child2RawCode": "NA",
@@ -88,7 +88,7 @@
   "AppWatchdog2Child4RawCode": "NA",
   "AppWatchdog2DriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-driver.groovy",
   "AppWatchdog2Discussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdog2UpdateNote": "V2.0.1 - 08/20/19 - Fixed some missing code in dName.",
+  "AppWatchdog2UpdateNote": "V2.0.2 - 08/24/19 - Each Parent can now have up to 4 child apps. Working on a ton of bugs. There are still some to squash, sorry.",
 
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v2.0.0",
