--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -32,8 +32,8 @@
   
   "AbacusIntenseCountingType": "App",
   "AbacusIntenseCountingParentVersion": "v2.0.0",
-  "AbacusIntenseCountingChildVersion": "v2.0.0",
-  "AbacusIntenseCountingChildName": "Child",
+  "AbacusIntenseCountingChild1Version": "v2.0.0",
+  "AbacusIntenseCountingChild1Name": "",
   "AbacusIntenseCountingChild2Version": "",
   "AbacusIntenseCountingChild2Name": "",
   "AbacusIntenseCountingChild3Version": "",
@@ -52,8 +52,8 @@
   
   "AbacusTimeTravelerType": "App",
   "AbacusTimeTravelerParentVersion": "v2.0.0",
-  "AbacusTimeTravelerChildVersion": "v2.0.0",
-  "AbacusTimeTravelerChildName": "Child",
+  "AbacusTimeTravelerChild1Version": "v2.0.0",
+  "AbacusTimeTravelerChild1Name": "",
   "AbacusTimeTravelerChild2Version": "",
   "AbacusTimeTravelerChild2Name": "",
   "AbacusTimeTravelerChild3Version": "",
@@ -72,8 +72,8 @@
 
   "AppWatchdog2Type": "App",
   "AppWatchdog2ParentVersion": "v2.0.1",
-  "AppWatchdog2ChildVersion": "v2.0.3",
-  "AppWatchdog2ChildName": "Child",
+  "AppWatchdog2Child1Version": "v2.0.3",
+  "AppWatchdog2Child1Name": "",
   "AppWatchdog2Child2Version": "",
   "AppWatchdog2Child2Name": "",
   "AppWatchdog2Child3Version": "",
@@ -92,8 +92,8 @@
 
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v2.0.0",
-  "AtHomeSimulatorChildVersion": "v2.0.0",
-  "AtHomeSimulatorChildName": "Child",
+  "AtHomeSimulatorChild1Version": "v2.0.0",
+  "AtHomeSimulatorChild1Name": "",
   "AtHomeSimulatorChild2Version": "",
   "AtHomeSimulatorChild2Name": "",
   "AtHomeSimulatorChild3Version": "",
@@ -112,8 +112,8 @@
   
   "BIControlType": "App",
   "BIControlParentVersion": "v2.0.0",
-  "BIControlChildVersion": "v2.0.0",
-  "BIControlChildName": "Child",
+  "BIControlChild1Version": "v2.0.0",
+  "BIControlChild1Name": "",
   "BIControlChild2Version": "",
   "BIControlChild2Name": "",
   "BIControlChild3Version": "",
@@ -132,8 +132,8 @@
   
   "CATTDirectorType": "App",
   "CATTDirectorParentVersion": "v2.0.0",
-  "CATTDirectorChildVersion": "v2.0.0",
-  "CATTDirectorChildName": "Child",
+  "CATTDirectorChild1Version": "v2.0.0",
+  "CATTDirectorChild1Name": "",
   "CATTDirectorChild2Version": "",
   "CATTDirectorChild2Name": "",
   "CATTDirectorChild3Version": "",
@@ -152,8 +152,8 @@
   
   "ChromecastHelperType": "App",
   "ChromecastHelperParentVersion": "v2.0.0",
-  "ChromecastHelperChildVersion": "",
-  "ChromecastHelperChildName": "Child",
+  "ChromecastHelperChild1Version": "",
+  "ChromecastHelperChild1Name": "",
   "ChromecastHelperChild2Version": "",
   "ChromecastHelperChild2Name": "",
   "ChromecastHelperChild3Version": "",
@@ -172,8 +172,8 @@
   
   "DeparturesType": "App",
   "DeparturesParentVersion": "v2.0.0",
-  "DeparturesChildVersion": "v2.0.0",
-  "DeparturesChildName": "Departures Child",
+  "DeparturesChild1Version": "v2.0.0",
+  "DeparturesChild1Name": "Departures Child",
   "DeparturesChild2Version": "v2.0.0",
   "DeparturesChild2Name": "Arrivals Child",
   "DeparturesChild3Version": "",
@@ -192,8 +192,8 @@
   
   "DeviceSequencerType": "App",
   "DeviceSequencerParentVersion": "v2.0.0",
-  "DeviceSequencerChildVersion": "v2.0.0",
-  "DeviceSequencerChildName": "Child",
+  "DeviceSequencerChild1Version": "v2.0.0",
+  "DeviceSequencerChild1Name": "",
   "DeviceSequencerChild2Version": "",
   "DeviceSequencerChild2Name": "",
   "DeviceSequencerChild3Version": "",
@@ -212,8 +212,8 @@
   
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v2.0.0",
-  "DeviceWatchdogChildVersion": "v2.0.0",
-  "DeviceWatchdogChildName": "Child",
+  "DeviceWatchdogChild1Version": "v2.0.0",
+  "DeviceWatchdogChild1Name": "",
   "DeviceWatchdogChild2Version": "",
   "DeviceWatchdogChild2Name": "",
   "DeviceWatchdogChild3Version": "N",
@@ -232,8 +232,8 @@
   
   "FollowMeType": "App",
   "FollowMeParentVersion": "v2.0.0",
-  "FollowMeChildVersion": "v2.0.2",
-  "FollowMeChildName": "Child",
+  "FollowMeChild1Version": "v2.0.2",
+  "FollowMeChild1Name": "",
   "FollowMeChild2Version": "",
   "FollowMeChild2Name": "",
   "FollowMeChild3Version": "",
@@ -252,8 +252,8 @@
   
   "FullyKioskDirectorType": "App",
   "FullyKioskDirectorParentVersion": "v2.0.0",
-  "FullyKioskDirectorChildVersion": "v2.0.0",
-  "FullyKioskDirectorChildName": "Child",
+  "FullyKioskDirectorChild1Version": "v2.0.0",
+  "FullyKioskDirectorChild1Name": "",
   "FullyKioskDirectorChild2Version": "",
   "FullyKioskDirectorChild2Name": "",
   "FullyKioskDirectorChild3Version": "",
@@ -272,8 +272,8 @@
   
   "GentleWakeUpType": "App",
   "GentleWakeUpParentVersion": "v2.0.0",
-  "GentleWakeUpChildVersion": "v2.0.0",
-  "GentleWakeUpChildName": "Child",
+  "GentleWakeUpChild1Version": "v2.0.0",
+  "GentleWakeUpChild1Name": "",
   "GentleWakeUpChild2Version": "",
   "GentleWakeUpChild2Name": "",
   "GentleWakeUpChild3Version": "",
@@ -292,8 +292,8 @@
   
   "Life360TrackerType": "App",
   "Life360TrackerParentVersion": "v2.0.0",
-  "Life360TrackerChildVersion": "v2.0.0",
-  "Life360TrackerChildName": "Child",
+  "Life360TrackerChild1Version": "v2.0.0",
+  "Life360TrackerChild1Name": "",
   "Life360TrackerChild2Version": "",
   "Life360TrackerChild2Name": "",
   "Life360TrackerChild3Version": "",
@@ -312,8 +312,8 @@
   
   "Life360withStatesType": "App",
   "Life360withStatesParentVersion": "v2.0.0",
-  "Life360withStatesChildVersion": "",
-  "Life360withStatesChildName": "Child",
+  "Life360withStatesChild1Version": "",
+  "Life360withStatesChild1Name": "",
   "Life360withStatesChild2Version": "",
   "Life360withStatesChild2Name": "",
   "Life360withStatesChild3Version": "",
@@ -332,8 +332,8 @@
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v2.0.0",
-  "LightingEffectsChildVersion": "v2.0.0",
-  "LightingEffectsChildName": "Child",
+  "LightingEffectsChild1Version": "v2.0.0",
+  "LightingEffectsChild1Name": "",
   "LightingEffectsChild2Version": "",
   "LightingEffectsChild2Name": "",
   "LightingEffectsChild3Version": "",
@@ -352,8 +352,8 @@
   
   "MagicCubeType": "App",
   "MagicCubeParentVersion": "v2.0.0",
-  "MagicCubeChildVersion": "v2.0.1",
-  "MagicCubeChildName": "Child",
+  "MagicCubeChild1Version": "v2.0.1",
+  "MagicCubeChild1Name": "",
   "MagicCubeChild2Version": "",
   "MagicCubeChild2Name": "",
   "MagicCubeChild3Version": "",
@@ -372,8 +372,8 @@
   
   "MotionControlledSceneLightingType": "App",
   "MotionControlledSceneLightingParentVersion": "v2.0.0",
-  "MotionControlledSceneLightingChildVersion": "v2.0.0",
-  "MotionControlledSceneLightingChildName": "Child",
+  "MotionControlledSceneLightingChild1Version": "v2.0.0",
+  "MotionControlledSceneLightingChild1Name": "",
   "MotionControlledSceneLightingChild2Version": "",
   "MotionControlledSceneLightingChild2Name": "",
   "MotionControlledSceneLightingChild3Version": "",
@@ -392,8 +392,8 @@
   
   "NotifierPlusType": "App",
   "NotifierPlusParentVersion": "v2.0.0",
-  "NotifierPlusChildVersion": "v2.0.0",
-  "NotifierPlusChildName": "Child",
+  "NotifierPlusChild1Version": "v2.0.0",
+  "NotifierPlusChild1Name": "",
   "NotifierPlusChild2Version": "",
   "NotifierPlusChild2Name": "",
   "NotifierPlusChild3Version": "",
@@ -412,8 +412,8 @@
   
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v2.0.0",
-  "OneataTimeChildVersion": "v2.0.0",
-  "OneataTimeChildName": "Child",
+  "OneataTimeChild1Version": "v2.0.0",
+  "OneataTimeChild1Name": "",
   "OneataTimeChild2Version": "",
   "OneataTimeChild2Name": "",
   "OneataTimeChild3Version": "",
@@ -432,8 +432,8 @@
   
   "SendIP2IRType": "App",
   "SendIP2IRParentVersion": "v2.0.0",
-  "SendIP2IRChildVersion": "v2.0.0",
-  "SendIP2IRChildName": "Child",
+  "SendIP2IRChild1Version": "v2.0.0",
+  "SendIP2IRChild1Name": "",
   "SendIP2IRChild2Version": "",
   "SendIP2IRChild2Name": "",
   "SendIP2IRChild3Version": "",
@@ -452,8 +452,8 @@
   
   "SimpleDeviceTimerType": "App",
   "SimpleDeviceTimerParentVersion": "v2.0.0",
-  "SimpleDeviceTimerChildVersion": "v2.0.0",
-  "SimpleDeviceTimerChildName": "Child",
+  "SimpleDeviceTimerChild1Version": "v2.0.0",
+  "SimpleDeviceTimerChild1Name": "",
   "SimpleDeviceTimerChild2Version": "",
   "SimpleDeviceTimerChild2Name": "",
   "SimpleDeviceTimerChild3Version": "",
@@ -472,8 +472,8 @@
   
   "SimpleIrrigationType": "App",
   "SimpleIrrigationParentVersion": "v2.0.0",
-  "SimpleIrrigationChildVersion": "v2.0.0",
-  "SimpleIrrigationChildName": "Child",
+  "SimpleIrrigationChild1Version": "v2.0.0",
+  "SimpleIrrigationChild1Name": "",
   "SimpleIrrigationChild2Version": "",
   "SimpleIrrigationChild2Name": "",
   "SimpleIrrigationChild3Version": "",
@@ -492,8 +492,8 @@
   
   "SnapshotType": "App",
   "SnapshotParentVersion": "v2.0.0",
-  "SnapshotChildVersion": "v2.0.0",
-  "SnapshotChildName": "Child",
+  "SnapshotChild1Version": "v2.0.0",
+  "SnapshotChild1Name": "",
   "SnapshotChild2Version": "",
   "SnapshotChild2Name": "",
   "SnapshotChild3Version": "",
@@ -512,8 +512,8 @@
   
   "WebPingerType": "App",
   "WebPingerParentVersion": "v2.0.0",
-  "WebPingerChildVersion": "v2.0.0",
-  "WebPingerChildName": "Child",
+  "WebPingerChild1Version": "v2.0.0",
+  "WebPingerChild1Name": "",
   "WebPingerChild2Version": "",
   "WebPingerChild2Name": "",
   "WebPingerChild3Version": "",
@@ -532,8 +532,8 @@
   
   "WelcomeHomeType": "App",
   "WelcomeHomeParentVersion": "v2.0.3",
-  "WelcomeHomeChildVersion": "v2.1.1",
-  "WelcomeHomeChildName": "Child",
+  "WelcomeHomeChild1Version": "v2.1.1",
+  "WelcomeHomeChild1Name": "",
   "WelcomeHomeChild2Version": "",
   "WelcomeHomeChild2Name": "",
   "WelcomeHomeChild3Version": "",
